2006-12-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* jni-kaffe.txt: Fix spelling of Red Hat.
	* jni-comp.txt: Ditto.

2006-11-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* projects.html: Remove links to jMocha page which is gone without
	replacement.

2006-10-23  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Update link to the January 2003 Linux Journal article.

2006-09-29  Joel Dice  <dicej@mailsnare.net>

	* index.html: Mention micro-libgcj release.

2006-07-02  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Shorten introduction.  Rotate some news...
	* news.html: ...to here.

2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Rotate news from here...
	* news.html: ...to here.
	Minor formatting changes.

2006-07-01  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* news.html: Untablify, and use CSS formatting instead.

2006-07-01  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* done.html: Fix link to the Tamanoir project.
	Remove link to Rimfaxe's site.

2006-06-20  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Include the GCC-specific stylesheet by default and
	add a new class "news" that redefines <dt> and <dd> in line with
	how our main page looks.  Use this for the News section on the
	Java main page.

2006-06-20  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Untablify the News section.

2006-06-13  Tom Tromey  <tromey@redhat.com>

	* index.html: Re-added Linux Journal link.

2006-06-11  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Compress the "What is GCJ?" section, including
	removal of the title.  Remove extraneous line breaks.  Use TM
	instead of tm for Trademark.

2006-06-06  Tom Tromey  <tromey@redhat.com>

	* index.html: News about ecj.

2006-05-20  Andreas Tobler  <a.tobler@schweiz.ch>

	* index.html: Add a news entry about the HP-UX PA 32-bit port.

2006-05-19  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* index.html: Add a news entry about the import of GNU Classpath 0.91.
	Move news entries from 2004 into...