@@ -37,6 +37,13 @@ href="http://www.gnu.org/software/gdb/">GNU Debugger</a> support GCJ
 <!-- News entries start here -->
 
 <dl class="news">
+<dt>January 8, 2007</dt>
+<dd>We've merged the <code>gcj-eclipse</code> branch to svn trunk.
+The merge changes gcj to use the Eclipse compiler as a front end,
+enabling all 1.5 language features.  This merge also brings in a new,
+generics-enabled version of Classpath, including some new tools.  This
+new code will appear in GCC 4.3.  </dd>
+
 <dt>September 11, 2006</dt>
 <dd>Joel Dice has
 <a
