@@ -1,3 +1,7 @@
+2007-01-09  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Mention ecj merge.
+
 2006-12-28  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* jni-kaffe.txt: Fix spelling of Red Hat.
